--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^17.3.7",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@material/dialog": "^14.0.0",
     "axios": "^1.6.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
